--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <div>
             <h3 class="fs-2 text-body-emphasis">Elite Clientele</h3>
-            <p>We have all the dogs, ithe greatest dogs.</p>
+            <p>We have all the dogs, the greatest dogs.</p>
           </div>
         </div>
         <div class="col d-flex align-items-start">
